--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -515,7 +515,8 @@ form .panel {
     right: 0;
     margin: 0;
     padding: 0;
-    font-size: 20px;
+    font-size: 28px;
+    font-weight: 600;
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
